<resources>
    <string name="app_name">iOrder</string>
    <string name="title_activity_take_order">Take order</string>
    <string name="title_activity_menu_set">Menu set</string>
    <string name="tv_orderqty">Qty:</string>
    <string name="btn_order_minus">-</string>
    <string name="btn_order_plus">+</string>
    <string name="btn_order_del">X</string>
    <string name="btn_order_comment">Comment</string>
    <string name="btn_sendorder">Send</string>
    <string name="btn_holdorder">Hold order</string>
    <string name="btn_display_holdorder">Hold order list</string>
    <string name="btn_plu">PLU</string>
    <string name="send_order_dialog_title">Send</string>
    <string name="send_order_dialog_success_msg">Send order successfully</string>
    <string name="send_order_dialog_fail">Send order fail</string>
    <string name="send_order_dialog_btn_close">Close</string>
    <string name="menuitem_btn_moredetail">More</string>
    <string name="action_movetable">Move table</string>
    <string name="action_mergetable">Merge table</string>
    <string name="action_move_menu">Move menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_updatews">Update data</string>
    <string name="menu_clearorder">Clear order</string>
    <string name="menu_logout">Log Out</string>
    <string name="action_move_menu_confirm">Confirm</string>
    <string name="action_move_menu_cancel">Close</string>
    <string name="dialog_title_sendorder">Send</string>
    <string name="dialog_sendorder_btnok">Ok</string>
    <string name="dialog_sendorder_btncancel">Cancel</string>
    <string name="tv_sendorder_tablezone">Table zone:</string>
    <string name="tv_sendorder_tablestatus">Table status</string>
    <string name="tv_sendorder_tablename">Table name</string>
    <string name="tv_sendorder_tablecapacity">Capacity</string>
    <string name="tv_sendorder_cusno">Qty</string>
    <string name="selecttable_btnplus">+</string>
    <string name="selecttable_btnminus">-</string>
    <string name="selecttable_tv_select_tbname">Table</string>
    <string name="selecttable_tv_select_cusno">Customer No.</string>
    <string name="title_activity_login">iOrder</string>
    <string name="title_activity_login_title">Login</string>
    <string name="login_menu_exit">Exit program</string>
    <string name="login_logo_text">iOrder</string>
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="login_dialog_title_cfm_exit">Exit program</string>
    <string name="login_dialog_msg_cfm_exit">Do you want to exit program?</string>
    <string name="login_dialog_btn_cfm_exit_Yes">Yes</string>
    <string name="login_dialog_btn_cfm_exit_No">No</string>
    <string name="title_activity_app_config_layout">Settings</string>
    <string name="btn_comment_minus">-</string>
    <string name="btn_comment_plus">+</string>
    <string name="title_menu_comment">Menu modify</string>
    <string name="btn_ok_comment">Ok</string>
    <string name="btn_cancel_comment">Cancel</string>
    <string name="label_menu_comment">Extra Comment</string>
    <string name="dialog_title_holdorder">Hold order</string>
    <string name="dialog_holdorder_btnclose">Close</string>
    <string name="txt_plu_hint">Code</string>
    <string name="dialog_plu_search_notfound_title">Search result</string>
    <string name="dialog_plu_search_notfound_msg">Not found product.</string>
    <string name="dialog_plu_search_btn_close">Close</string>
    <string name="btn_plu_del">Del</string>
    <string name="btn_plu_enter">Enter</string>
    <string name="sync_data_success">Update data successfully.</string>
    <string name="dialog_cancel_title_setmenu">Cancel</string>
    <string name="dialog_cancel_msg_setmenu">Are you sure you want to cancel?</string>
    <string name="dialog_cancel_btn_yes_setmenu">Yes</string>
    <string name="dialog_cancel_btn_no_setmenu">No</string>
    <string name="menu_setmenu_confirm">Done</string>
    <string name="menu_setmenu_cancel">Cancel</string>
    <string name="tv_childitem_tv_req_text"></string>
    <string name="btn_childorder_linktype7_minus">-</string>
    <string name="btn_childorder_linktype7_plus">+</string>
    <string name="btn_childorder_linktype7_delete">X</string>
    <string name="btn_childorder_linktype7_comment">Comment</string>
    <string name="btn_childorder_linktype7_edit">Edit</string>
    <string name="title_activity_splash">iOrder</string>
    <string name="menuset_dialog_done_title">Warning</string>
    <string name="menuset_dialog_done_msg">Please select</string>
    <string name="menuset_dialog_done_close">Close</string>
    <string name="action_menu_table_util">Table</string>
    <string name="action_menu_menu_util">Menu</string>
    <string name="action_menu_move_menu">Move menu</string>
    <string name="action_menu_cancel_menu">Cancel menu</string>
    <string name="move_table_title">Move table</string>
    <string name="move_table_tvfrom">From</string>
    <string name="move_table_tvto">To</string>
    <string name="move_table_tvzonefrom">Table zone</string>
    <string name="move_table_tvtbfrom">Table name</string>
    <string name="move_table_tvzoneto">Table zone</string>
    <string name="move_table_tvtbto">Table name</string>
    <string name="move_table_tvreason">Reason</string>
    <string name="move_table_dialog_title">Move table</string>
    <string name="move_table_action_menu_ok">Confirm</string>
    <string name="move_table_action_menu_Cancel">Close</string>
    <string name="move_table_result_success">Move table success.</string>
    <string name="move_table_result_fail">Move table fail.</string>
    <string name="merge_table_result_success">Merge table success.</string>
    <string name="merge_table_result_fail">Merge table fail.</string>
    <string name="move_menu_dialog_title">Move menu</string>
    <string name="move_menu_dialog_btn_cancel">Cancel</string>
    <string name="move_menu_dialog_btn_confirm">Confirm</string>
    <string name="move_menu_btn_choose_menu">Select menu</string>
    <string name="move_menu_tv_reason">Reason</string>
    <string name="move_menu_tv_menu_to_move">Selected menu</string>
    <string name="move_menu_result_success">Move menu success.</string>
    <string name="move_menu_result_fail">Move menu fail.</string>
    <string name="global_close_dialog_btn">Close</string>
    <string name="title_activity_cancel_menu">Cancel menu</string>
    <string name="cancel_menu_btn_shoose_menu">Select menu</string>
    <string name="cancel_menu_tv_reason">Reason</string>
    <string name="cancel_menu_action_menu_confirm">Confirm</string>
    <string name="cancel_menu_action_menu_cancel">Close</string>
    <string name="cancel_menu_result_success">Cancel menu success.</string>
    <string name="cancel_menu_result_fail">Cancel menu fail.</string>
    <string name="title_activity_check_bill">Bill Summary</string>
    <string name="send_order_progress">Sending please wait&#8230;</string>
    <string name="ok_shoose_holded_order">Ok</string>
    <string name="cancel_shoose_holded_order">Cancel</string>
    <string name="app_setting_save">Save</string>
    <string name="app_setting_close">Close</string>
    <string name="app_setting_message">Connection</string>
    <string name="device_not_register">This device is not register.</string>
    <string name="checking_device">Checking device please wait&#8230;</string>
    <string name="update_shop_progress">Update shop data&#8230;</string>
    <string name="update_product_progress">Update product data&#8230;</string>
    <string name="update_menu_progress">Update menu data&#8230;</string>
    <string name="update_reason_progress">Update reason data&#8230;</string>
    <string name="update_data_title">Update data</string>
    <string name="move_table_progress">Moving please wait&#8230;</string>
    <string name="merge_table_progress">Merging please wait&#8230;</string>
    <string name="move_table_activity_title">Move table</string>
    <string name="merge_table_activity_title">Merge table</string>
    <string name="btn_move_table">Move</string>
    <string name="btn_cancel_move_table">Cancel</string>
    <string name="btn_merge_table">Merge</string>
    <string name="btn_cancel_merge_table">Cancel</string>
    <string name="load_current_order_progress">Load current order&#8230;</string>
    <string name="check_bill_menu_close">Close</string>
    <string name="call_checkbill_progress">Call checkbill please wait&#8230;</string>
    <string name="call_chekcbill_success">Checkbill successfully.</string>
    <string name="call_checkbill_dialog_title">Call checkbill</string>
    <string name="please_select_table">Please selected table</string>
    <string name="load_table_progress">Loading table..</string>
    <string name="call_checkbill_print">Print Long Bill</string>
    <string name="call_checkbill">Call Check Bill</string>
    <string name="call_checkbill_setmember">Set Member</string>
    <string name="title_activity_menu_detail">MenuDetailActivity</string>
    <string name="select_table">Select table</string>
    <string name="move_menu_progress">Moving menu please wait&#8230;</string>
    <string name="cancel_menu_progress">Cancel menu please wait&#8230;</string>
    <string name="cancel_menu_dialog_title">Cancel menu</string>
    <string name="title_activity_search_member">Member detail</string>
    <string name="btn_order">Order</string>
    <string name="loading_progress">Loading&#8230;</string>
    <string name="print_dialog_title">Print</string>
    <string name="print_success">Print success.</string>
    <string name="print_progress">Printing please wait&#8230;</string>
    <string name="select_source_table">Please select source table.</string>
    <string name="select_destination_table">Please select destination table.</string>
    <string name="select_menu_to_move">Please select menu you want to move.</string>
    <string name="select_menu_to_cancel">Please select menu you want to cancel.</string>
    <string name="btn_shoose_table">Set Table</string>
    <string name="title_activity_move_menu">Move menu</string>
    <string name="selected_table_label">Table:</string>
    <string name="total_qty_label">Total:</string>
    <string name="btn_set_queue">Set Queue</string>
    <string name="btn_cancel_menu_comment">Cancel</string>
    <string name="btn_ok_menu_comment">Ok</string>
    <string name="menu_set_close">Close</string>
    <string name="btn_custom_dialog_ok">Ok</string>
    <string name="btn_custom_dialog_cancel">Cancel</string>
    <string name="dialog_delete_item_title">Delete</string>
    <string name="hold_remark_label">Remark:</string>
    <string name="hold_dialog_title">Hold order</string>
    <string name="global_btn_cancel">Cancel</string>
    <string name="global_btn_ok">Ok</string>
    <string name="call_checkbill_setmember_barcode">Bar Code</string>
    <string name="call_checkbill_setmember_qrcode">QR Code</string>
    <string name="member_code">Code:</string>
    <string name="button_search_member">Search</string>
    <string name="text_member_code">Member Code:</string>
    <string name="text_member_name">Member Name:</string>
    <string name="activity_member_title">Search member</string>
    <string name="text_member_group">Member Group:</string>
    <string name="text_member_mobile">Member Mobile:</string>
    <string name="text_member_birth_day">Member Birthday:</string>
    <string name="text_member_expire">Member Expire:</string>
    <string name="text_kds_table_zone">Table zone:</string>
    <string name="text_kds_table_name">Table:</string>
    <string name="order_by_time">Time</string>
    <string name="order_by_finish">Finished</string>
    <string name="order_by_name">Name</string>
    <string name="reason">Reason</string>
    <string name="enter_reason">Enter reason</string>
</resources>