<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_setting_light"
        android:showAsAction="always|withText"
        android:title="@string/menu_settings">
    </item>
    <item
        android:id="@+id/Update"
        android:icon="@drawable/ic_action_update_light"
        android:showAsAction="always|withText"
        android:title="@string/menu_updatews">
    </item>
    <item
        android:id="@+id/item_other"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_light"
        android:showAsAction="always">
        <menu>

            <!-- <item android:id="@+id/log" android:title="@string/login_menu_log"></item> -->
            <item
                android:id="@+id/itemAbout"
                android:title="About">
            </item>
            <item
                android:id="@+id/login_menu_exit"
                android:title="@string/login_menu_exit"/>
        </menu>
    </item>

</menu>