<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:orientation="vertical"
    android:padding="4dp" >

    <TextView
        android:id="@+id/textViewHoldTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/hold_dialog_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextHoldRemark"
        android:layout_marginTop="8dp" >

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/light_grey_button"
            android:minHeight="0dp"
            android:minWidth="48dp"
            android:text="@string/global_btn_cancel"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/light_grey_button"
            android:minHeight="0dp"
            android:minWidth="48dp"
            android:text="@string/global_btn_ok"
            android:textSize="12sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextHoldRemark"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewHoldTitle"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_selector"
        android:ems="10"
        android:hint="@string/hold_remark_label" />

</RelativeLayout>