<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tvSubmitTime"
            style="@style/text_medium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical"
            android:text="@string/text_kds_table_zone"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinnerTableZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:gravity="right|center_vertical"
            android:text="@string/text_kds_table_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewKdsSelTable"
            style="@style/text_medium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="@drawable/list_background" >

        <ListView
            android:id="@+id/listViewTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:choiceMode="singleChoice"
            android:listSelector="@drawable/list_selector" >
        </ListView>

        <ProgressBar
            android:id="@+id/progressBarTable"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonKdsOrderByTime"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/light_grey_button"
            android:minHeight="0dp"
            android:minWidth="48dp"
            android:text="@string/order_by_time"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonKdsOrderByFinishTime"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/light_grey_button"
            android:minHeight="0dp"
            android:minWidth="48dp"
            android:text="@string/order_by_finish"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonKdsOrderByName"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/light_grey_button"
            android:minHeight="0dp"
            android:minWidth="48dp"
            android:text="@string/order_by_name"
            android:textSize="12sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="@drawable/list_background" >

        <ListView
            android:id="@+id/listViewKdsInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </ListView>

        <ProgressBar
            android:id="@+id/progressBarKds"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>